--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap" rel="stylesheet">
     <link rel="icon" href="./imagens/favicon-16x16.png">
-    <title>Document</title>
+    <title>QuizFeliz</title>
 </head>
 <body>
     <header class="cabecalho">
